--- a/app/src/main/res/layout/activity_account_verification.xml
+++ b/app/src/main/res/layout/activity_account_verification.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,16 +21,16 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_back_btn"
-            app:title="ACCOUNT VERIFICATION"
-            />
+            app:title="ACCOUNT VERIFICATION" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="40dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,28 +39,28 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Identity Verification"
             android:fontFamily="@font/poppins_regular"
-            android:textStyle="bold"
+            android:text="Identity Verification"
             android:textColor="@color/dark_blue1"
-            android:textSize="25dp"/>
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/ey"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="In order to be verified you must submit the requirements."
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins_regular"
+            android:text="In order to be verified you must submit the requirements."
             android:textColor="@color/dark_blue1" />
 
         <TextView
             android:id="@+id/ey1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="Upload down below the following:"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/poppins_regular"
+            android:text="Upload down below the following:"
             android:textColor="@color/dark_blue1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.08"
@@ -73,8 +72,8 @@
             android:layout_width="317dp"
             android:layout_height="23dp"
             android:layout_marginTop="20dp"
-            android:text="Driver's License Picture (front and back)\n"
             android:fontFamily="@font/poppins_regular"
+            android:text="Driver's License Picture (front and back)\n"
             android:textColor="@color/dark_blue1"
             android:textStyle="bold" />
 
@@ -98,8 +97,8 @@
                     android:id="@+id/driverLicense1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
                     android:background="@color/violet"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/ic_plus_sign" />
             </com.google.android.material.card.MaterialCardView>
 
@@ -117,8 +116,8 @@
                     android:id="@+id/driverLicense2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
                     android:background="@color/violet"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/ic_plus_sign" />
             </com.google.android.material.card.MaterialCardView>
 
@@ -155,8 +154,8 @@
                     android:id="@+id/selfie1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
                     android:background="@color/violet"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/ic_plus_sign" />
             </com.google.android.material.card.MaterialCardView>
 
@@ -165,9 +164,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:text="Please wait for your account to be verified thank you."
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/poppins_regular"
+            android:text="Please wait for your account to be verified thank you."
             android:textColor="@color/dark_blue1" />
 
     </LinearLayout>
@@ -176,17 +175,17 @@
         android:id="@+id/verifyBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/btn_violet"
         android:fontFamily="@font/poppins_regular"
         android:text="Verify"
         android:textSize="18sp"
-        android:background="@drawable/btn_violet"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
