--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -129,8 +129,10 @@
             android:drawableTint="@color/white2"
             android:hint="Contact Number"
             android:paddingBottom="15dp"
+            android:inputType="phone"
             android:textColor="@color/white1"
             android:textColorHint="@color/white1"
+            android:maxLength="11"
             app:layout_constraintTop_toBottomOf="@+id/name"
             app:layout_constraintEnd_toEndOf="@+id/name"
             app:layout_constraintStart_toStartOf="@+id/name"
