--- a/app/src/main/res/layout/booked_item.xml
+++ b/app/src/main/res/layout/booked_item.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="15dp"
-    android:layout_marginLeft="40dp"
-    android:layout_marginRight="40dp"
+    android:layout_marginLeft="25dp"
+    android:layout_marginRight="25dp"
     app:cardElevation="5dp"
     app:cardCornerRadius="15dp"
     android:backgroundTint="@color/white">
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingLeft="20dp"
+            android:paddingLeft="10dp"
             android:gravity="center_vertical">
 
             <TextView
@@ -86,7 +86,7 @@
                     android:fontFamily="@font/poppins_regular"
                     android:text="/day"
                     android:textSize="14dp"
-                    android:textColor="@color/dark_blue1"/>
+                    android:textColor="@color/violet"/>
             </LinearLayout>
 
             <LinearLayout
