--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/bookings"
         android:title="Bookings"
-        android:icon="@drawable/ic_steering_wheel"/>
+        android:icon="@drawable/ic_bookings"/>
     <item
         android:id="@+id/host"
         android:title="Host"
